# test-ruby-dxlib-cpp

./: .gitignore  CMakeLists.txt  Log.txt  build.bat  memo.txt
script/: dxlib_const_variables.rb  init.rb  main.rb
src/: CMakeLists.txt  main.cpp
